Updated the manifest

--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "CleanCab Pressurizer",
-  "short_name": "CleanCab",
-  "description": "Monitor and Configure your CleanCab Pressurizer",
-  "id": "/cleancab",
-  "start_url": "/cleancab",
+  "name": "CleanCab Pressurizer (Tech)",
+  "short_name": "CleanCab-Tech",
+  "description": "Configure your CleanCab Pressurizer",
+  "id": "/cleancab-tech",
+  "start_url": "/cleancab-tech",
   "display": "standalone",
   "scope": "/",
   "background_color": "#000000",
