Getting the separate apps to install

--- a/manifest.json
+++ b/manifest.json
@@ -10,22 +10,22 @@
   "theme_color": "#0f4a73",
   "icons": [
   {
-    "src": "images/appicon-144.png",
+    "src": "tech-images/appicon-144.png",
     "sizes": "144x144",
     "type": "image/png"
   },
   {
-    "src": "images/appicon-192.png",
+    "src": "tech-images/appicon-192.png",
     "type": "image/png",
     "sizes": "192x192"
   },
   {
-    "src": "images/appicon-512.png",
+    "src": "tech-images/appicon-512.png",
     "type": "image/png",
     "sizes": "512x512"
   },
   {
-    "src": "images/appicon-256.png",
+    "src": "tech-images/appicon-256.png",
     "type": "image/png",
     "sizes": "256x256"
   }
